--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,17 @@
 <resources>
-    <string name="app_name">SeriesBook</string>
+
+    <!-- Preferences strings Appearance -->
+    <string name="pref_category_appearance">Appearance</string>
+    <string name="pref_title_theme">Theme</string>
+
+    <string-array name="pref_theme_list_titles">
+        <item>Dark</item>
+        <item>Light</item>
+    </string-array>
+    <string-array name="pref_theme_list_values">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
