--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,5 +17,6 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
-    <string name="add_category">+ Add Category</string>
+    <string name="add_category">Add new category</string>
+    <string name="action_about">About</string>
 </resources>
