--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,8 @@
     <string name="action_settings">Settings</string>
     <string name="add_category">Add new category</string>
     <string name="action_about">About</string>
+    <string name="creating_category">Creating Category</string>
+    <string name="category_name">Category Name:</string>
+    <string name="create">Create</string>
+    <string name="cancel">Cancel</string>
 </resources>
