--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="category_name">Category Name:</string>
     <string name="create">Create</string>
     <string name="cancel">Cancel</string>
+    <string name="error_category">Required Name</string>
 </resources>
