--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="create">Create</string>
     <string name="cancel">Cancel</string>
     <string name="error_category">Required Name</string>
+    <string name="removing_category">Removing Category</string>
 </resources>
