--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,9 +20,9 @@
     <string name="add_category">Add new category</string>
     <string name="action_about">About</string>
     <string name="creating_category">Creating Category</string>
-    <string name="category_name">Category Name:</string>
+    <string name="category_name">Category name</string>
     <string name="create">Create</string>
     <string name="cancel">Cancel</string>
-    <string name="error_category">Required Name</string>
+    <string name="error_category">Required name!</string>
     <string name="removing_category">Removing Category</string>
 </resources>
