Añadida botón añadir serie.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,6 @@
     <string name="season">Season</string>
     <string name="chapter">Episode</string>
     <string name="add_serie">Add Category</string>
+    <string name="serie">Serie</string>
+    <string name="creating_serie">Creating serie</string>
 </resources>
