--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,19 +15,26 @@
         <item>2</item>
     </string-array>
 
-    <string name="action_settings">Settings</string>
+    <!-- Category -->
     <string name="add_category">Add new category</string>
-    <string name="action_about">About</string>
     <string name="creating_category">Creating Category</string>
     <string name="category_name">Category name</string>
+    <string name="removing_category">Removing Category</string>
+
+    <!-- Serie -->
+    <string name="removing_serie">Removing Serie</string>
+    <string name="creating_serie">Creating serie</string>
+
+    <!-- Dialogs -->
     <string name="create">Create</string>
     <string name="cancel">Cancel</string>
     <string name="error_category">Required name!</string>
-    <string name="removing_category">Removing Category</string>
-    <string name="removing_serie">Removing Serie</string>
     <string name="season">Season</string>
     <string name="chapter">Episode</string>
-    <string name="add_serie">Add Category</string>
     <string name="serie">Serie</string>
-    <string name="creating_serie">Creating serie</string>
+    <string name="show_seasons">Show Seasons?</string>
+
+    <string name="action_settings">Settings</string>
+    <string name="action_about">About</string>
+
 </resources>
